Mon Dec 27 11:07:05 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* dbxread.c: Move default definition of GCC_COMPILED_FLAG_SYMBOL
	from here . . .
	* symtab.h: . . . to here.
	* dbxread.c (record_minimal_symbol): Move check for gcc{,2}_compiled.
	and __gnu_compiled* from here . . .
	* minsyms.c (prim_record_minimal_symbol_and_info): . . . to here.
	* minsyms.c (prim_record_minimal_symbol): Call
	prim_record_minimal_symbol_and_info rather than duplicating code.

Sun Dec 26 20:44:02 1993  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* dbxread.c (process_one_symbol): Handle stabs-in-som just like
	stabs-in-elf.
	(pastab_build_psymtabs): Likewise.

	* hppa-tdep.c: Change all comments to reference %r3 or frame
	pointer rather than %r4.
	(frame_chain, skip_prologue, dig_rp_from_stack): Handle %r3 as the
	frame pointer.

	* config/pa/tm-hppa.h (FP_REGNUM): Define as %r3.
	(FIND_FRAME_SAVED_REGS): Handle %r3 as frame pointer.
	(CALL_DUMMY): Likewise.

Sun Dec 26 16:59:39 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* exec.c (exec_file_command): If error occurs after we have opened
	exec_bfd but before we call push_target, make sure to close exec_bfd.

	* infrun.c (wait_for_inferior): Remove confusing and inaccurate
	stuff about subroutine calls, return, etc., from comment which
	says "We've wandered out of the step range.".

Sun Dec 26 09:18:10 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* infrun.c (wait_for_inferior): When checking whether the line has
	changed, check the symtab as well.

Sun Dec 26 09:18:10 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* gdbtypes.c (force_to_range_type): Use switch statement.
	complain() not warning() if the TYPE_CODE isn't one we know how to
	deal with gracefully.  Use builtin_type_int not
	lookup_fundamental_type (the objfile we passed to
	lookup_fundamental_type was sometimes NULL).

	* valops.c (call_function_by_hand, push_word), defs.h (push_word),